--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./input.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -513,7 +514,7 @@
                     <span class="text-xl font-semibold">10.99 $</span>
                   </div>
                 </div>
-                <a class="inline-flex items-center px-4 py-2 text-black border-2 border-yellow-500 rounded-md rounded-md hover:bg-yellow-100" href="#">
+                <a class="inline-flex items-center px-4 py-2 text-black border-2 border-yellow-500  rounded-md hover:bg-yellow-100" href="#">
                 Add to cart
                 </a>
               </div>
@@ -545,7 +546,7 @@
                     <span class="text-xl font-semibold">10.99 $</span>
                   </div>
                 </div>
-                <a class="inline-flex items-center px-4 py-2 text-black border-2 border-yellow-500 rounded-md rounded-md hover:bg-yellow-100" href="#">
+                <a class="inline-flex items-center px-4 py-2 text-black border-2 border-yellow-500  rounded-md hover:bg-yellow-100" href="#">
                  Add to cart
                 </a>
               </div>
@@ -800,7 +801,7 @@
         <span class="text-sm text-gray-400">© 2019, Created by <a class="text-yellow-500 hover:underline" href="https://themeforest.net/user/artureanec" target="_blank">Amritha</a> | <a href="#" class="text-yellow-500 hover:underline">Privacy Policy</a> | <a href="#" class="text-yellow-500 hover:underline">Sitemap</a></span>
       </div>
 
-      <!-- Newsletter-->
+      <!-- Newsletter Signup -->
       <div class="w-full lg:w-1/2 px-4">
         <form class="flex">
           <input class="form-input flex-1 bg-gray-900 text-white placeholder-gray-500 py-2 px-4 rounded-l-lg" type="email" placeholder="Your E-mail">
